Fix contest page on mobile

--- a/app/styles/etherwallet-custom.less
+++ b/app/styles/etherwallet-custom.less
@@ -748,8 +748,12 @@ header.ETSC {
 }
 
 .contest-container {
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 !important;
   text-align: center;
-  padding: 0 10em;
   ol {
     text-align: left !important;
 
